Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntObjText.quorum
class Main
    action Main
        Integer v
        v:SetValue(Test())
    end

    action Test() returns Integer
        text var = "text"
        return var
    end
end